Added more tests for AbbreviateJournalDefaultCleanup